<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UCRInstagram</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_signup__login">UCRInstagram</string>
    <string name="title_activity_new_member">Register a new account!</string>
    <string name="new_member_username">Create a username</string>
    <string name="new_member_password">Create a password</string>
    <string name="error_taken_username">This username has already been used, try again.</string>
    <string name="error_short_password">A password must be at least four characters</string>
    <string name="button_new_member_test">Check Username</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="member_username">Username</string>
    <string name="member_password">Password</string>
    <string name="error_login"></string>
    <string name="button_sign_in">Sign In</string>
    <string name="home_tab">Home</string>
    <string name="explore_tab">Explore</string>
    <string name="camera_tab">Camera</string>
    <string name="updates_tab">Updates</string>
    <string name="profile_tab">Profile</string>
    <string name="favorites_tab">Favorites</string>
    <string name="title_activity_home_screen">UCRInstagram</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_explore">Explore</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_homescreen_detail">HomeScreen Detail</string>
    <string name="title_homescreen_list">Items</string>
    <string name="camera_string">Take a picture</string>
    <string name="gallery_string">Choose from gallery</string>
    <string name="title_activity_post_picture">PostPicture</string>
    <string name="post_picture_caption">Type your caption here</string>
    <string name="title_activity_favorites">Favorites</string>
    <string name="add_favorite">Like</string>
    
    <!-- profile pages -->
    <string name="username">Username</string>
    <string name="nickname">Nickname</string>
    <string name="gender">Gender</string>
    <string name="profile_creation_date">Profile Created on:</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="photos">Photos</string>
    <string name="about_me">About Me</string>
    <string name="bday">Birthday:</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>

    <!-- website address for api calls -->
    <string name="apiURL">http://www.mgx-dev.com/</string>
    <string name="title_activity_filter">Filter</string>

    <!-- Preferences -->
    <string name="userPref">Usern@me</string>
    <string name="nickPref">Nickname</string>
    <string name="bioPref">bio</string>
    <string name="emailPref">email@email.com</string>
    <string name="dob">dob:</string>

    <!-- friendslist -->
    <string name="friend1">friend1</string>
    <string name="title_activity_following">Following</string>
    <string name="title_activity_followers">Followers</string>
    <string name="title_activity_profile_other">ProfileOther</string>

</resources>