<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile" >

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/username" />

    <TextView
        android:id="@+id/following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/username"
        android:layout_marginRight="36dp"
        android:clickable="true"
        android:onClick="following"
        android:text="@string/following" />

    <TextView
        android:id="@+id/followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/following"
        android:layout_alignBottom="@+id/following"
        android:layout_marginRight="17dp"
        android:layout_toLeftOf="@+id/following"
        android:clickable="true"
        android:onClick="followers"
        android:text="@string/followers" />

    <TextView
        android:id="@+id/photos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginRight="18dp"
        android:layout_toLeftOf="@+id/followers"
        android:text="@string/photos" />

    <!-- <TextView -->
    <!-- android:layout_width="fill_parent" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_below="@id/username" -->
    <!-- android:layout_alignParentLeft="true" -->
    <!-- android:text="Loading image from url" -->
    <!-- android:layout_margin="10dip" /> -->

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/photos"
        android:layout_margin="10dip"
        android:clickable="true"
        android:onClick="startGallery" />

    <TextView
        android:id="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/image"
        android:text="@string/nickname" />

    <TextView
        android:id="@+id/profile_creation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/scrollviewer"
        android:layout_alignParentRight="true"
        android:text="@string/profile_creation_date" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/nickname"
        android:text="@string/gender" />

    <TextView
        android:id="@+id/aboutme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/gender"
        android:text="@string/about_me" />

    <TextView
        android:id="@+id/bday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/aboutme"
        android:text="@string/bday" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/profile_creation"
        android:layout_alignParentRight="true"
        android:onClick="logout"
        android:text="@string/logout"
        android:textSize="12sp" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/profile_creation"
        android:layout_toLeftOf="@+id/logout_button"
        android:onClick="settings"
        android:text="@string/settings"
        android:textSize="12sp" />

    <ScrollView
        android:id="@+id/scrollviewer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/linearButtons"
        android:layout_below="@id/bday"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:id="@+id/linearPictures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/home_button"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:drawableTop="@drawable/home"
            android:minWidth="64dp"
            android:onClick="home"
            android:text="@string/home_tab"
            android:textSize="12sp" />

        <Button
            android:id="@+id/explore_button"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/home_button"
            android:drawableTop="@drawable/explore"
            android:onClick="explore"
            android:text="@string/explore_tab"
            android:textSize="12sp" />

        <Button
            android:id="@+id/camera_button"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/explore_button"
            android:drawableTop="@drawable/camera"
            android:onClick="camera"
            android:text="@string/camera_tab"
            android:textSize="12sp" />

        <Button
            android:id="@+id/updates_button"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/explore_button"
            android:drawableTop="@drawable/update"
            android:onClick="updates"
            android:text="@string/updates_tab"
            android:textSize="12sp" />

        <Button
            android:id="@+id/profile_button"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/updates_button"
            android:drawableTop="@drawable/profile"
            android:text="@string/profile_tab"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>