<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraActivity" >
    <!-- nothing!! -->

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:onClick="startGallery"
        android:text="@string/gallery_string" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="166dp"
        android:onClick="startCamera"
        android:text="@string/camera_string" />

    <LinearLayout
        android:id="@+id/linearLayoutThatDoesNotScroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/home_button"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:onClick="home"
            android:text="@string/home_tab"
            android:textSize="12sp" />

        <Button
            android:id="@+id/explore_button"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/home_button"
            android:onClick="explore"
            android:text="@string/explore_tab"
            android:textSize="12sp" />

        <Button
            android:id="@+id/camera_button"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/explore_button"
            android:text="@string/camera_tab"
            android:textSize="12sp" />

        <Button
            android:id="@+id/updates_button"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/explore_button"
            android:onClick="updates"
            android:text="@string/updates_tab"
            android:textSize="12sp" />

        <Button
            android:id="@+id/profile_button"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/camera_button"
            android:onClick="profile"
            android:text="@string/profile_tab"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>